chore(project): fixes demo since boundary element had wrong height

--- a/src/app/info/info.component.scss
+++ b/src/app/info/info.component.scss
@@ -2,7 +2,7 @@
   background-color: #D1DBBD;
   color: #193441;
   display: block;
-  min-height: 100%;
+  min-height: 100vh;
 }
 
 a {
